 - the 3 images referenced in the CSS from themes/dragonfly/images.

_________________________________________________________
_________________________________________________________


Current release is for Dragonfly 9.3.x, 9.2.x and 9.1.x (and 9.0.6.1 with simple manual changes) only.

______________________________________________________
Significant Changes in 4.0.3 Version (from 4.0.2 version):

Fix significant issue with OpenGraph and Microdata if Article has an a href in Intro
Added make_clickable call so that http://, email addresses and @username become links

______________________________________________________
Significant Changes in 4.0.2 Version (from 4.0.1 version):

Add missing update to submit.html template for new Admin SEO Description field

______________________________________________________
Significant Changes in 4.0.1 Version (from 4.0.0 version):

Add full image as template variable for Home and Hdln so that image linking is an option in template
Add Config option for existing SEO-friendly Titles option to reverse breadcrumbs so Article is first
Support OpenGraph (for Facebook) and Microdata (for Google+) in head for full Article page
Add Config option Enable Open Graph Support for same
Add Config option to resize thumbnails based on height, width or max dimension (same as Coppermine)
Drop $siteslogan from full Article Meta description statement
Removed Pending Article check from all but Admin > Articles in order to speed up Submit Article
New Center Block options to use Section template (allows > 1 center template layout)
Add option for Center Blocks to report on > 1 Category (within same or different Section)
New input field in Admin > Submit Article to enter a specific SEO Description for Google, etc.
Minor improvements to Admin menu display for consistency
Bug fix for article access when member of > 1 group in Search and similar
Bug fix in Center Block when specifying Category and Section